--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 PORT=3000
 
-FRONTEND_URL=http://localhost:5173
+CORS_URL=http://localhost:5173
 
 MONGO_URI= # YOUR MONGO URI
 
@@ -14,7 +14,7 @@ SMTP_SERVICE=gmail
 
 SMTP_MAIL= # YOUR EMAIL
 
-SMTP_PASSWORD= # YOUR PASSWORD
+SMTP_PASSWORD= # YOUR PASSWORD (2fa , googleacoount(app password))
 
 SMTP_HOST=smtp.gmail.com
 
@@ -24,4 +24,11 @@ TWILIO_SID= # TWILIO SID
 
 TWILIO_PHONE_NUMBER= # TWILIO PHONE NUMBER
 
-TWILIO_AUTH_TOKEN= # TWILIO AUTH TOKEN
+TWILIO_AUTH_TOKEN= # TWILIO AUTH TOKEN\
+
+
+
+
+# 233117125062-b3036tcqqnmebrdcr1llufgtgq22ftce.apps.googleusercontent.com
+
+# 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
